--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "capitalism",
+  "name": "kappitalism",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,16 +8,17 @@
     "start": "next start"
   },
   "dependencies": {
+    "gsap": "^3.12.5",
+    "next": "15.5.5",
     "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "next": "15.5.5"
+    "react-dom": "19.1.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4"
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
